# Macro-Portfolio-Optimizer

./: .gitignore  README.md  architecture_diagram.html  pyproject.toml  requirements.txt  schema_documentation.docx
.claude/: settings.json
Analysis/: Intl_Bond_Analysis.py  splice_analysis_results.csv
Documentation/: PMI_Data_Documentation.md
Optimizer/: Optimizer.py  plot_frontier.py
Pipelines/: Data_Pipeline.py  Global_Equities_Pipeline.py  Macro_PMI_Pipeline_1.py  Macro_PMI_Pipeline_2.py  Macro_PMI_Pipeline_3.py  US_Equities_Pipeline.py
Pipelines/data/: new_test_data_quality.csv  new_test_prices_raw.csv  new_test_returns_aligned.csv  new_test_returns_full.csv  new_test_summary_stats.csv
Research/: Analysis_Assets.py  splice_candidates_results.csv
dashboard/: Home.py  data_access.py  sec_regime.py  sec_signals.py  theme.py
dashboard/.streamlit/: config.toml
data/: 1_US_EQ_fundamentals.csv  1_US_EQ_macro_indicators.csv  1_US_EQ_prices.csv  1_US_EQ_returns_annual.csv  1_US_EQ_returns_daily.csv  1_US_EQ_returns_monthly.csv  2_G_EQ_fundamentals.csv  2_G_EQ_prices.csv  2_G_EQ_returns_annual.csv  2_G_EQ_returns_daily.csv  2_G_EQ_returns_monthly.csv  PMI_Composite_US.csv  PMI_Composite_US_full.csv  PMI_Manufacturing_US.csv  PMI_Manufacturing_US_full.csv  PMI_NonManufacturing_US.csv  PMI_NonManufacturing_US_full.csv  benchmark_returns.csv  data_quality.csv  us_macro_2002_2026.csv  us_macro_2007_2026.csv  us_macro_2013_2018.csv
docs/: DASHBOARD_GUIDE.md  DASHBOARD_PLAN.md  FINDINGS.md  IPS.md  PMI_Data_Documentation.md  STRUCTURE.md  schema_diagram.xlsx
(+59 files in other folders)
