[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-portfolio-optimizer"
version = "0.1.0"
description = "Global Macro Portfolio Optimizer & Risk Analytics Platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Mauricio Torres" },
    { name = "Tianyin Mao" },
    { name = "Jack Joy" },
    { name = "Tiandra Threat" },
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "yfinance>=0.2.40",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
